--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -5,12 +5,44 @@ maintenance scheduling to more forward similar approaches will have to be adopte
 of the aspects. 
 
 This Ph.D. will present a generalized dynamic multi-model approach to maintenance scheduling which will be model after a practical maintenace handbook \cite{palmer_maintenance_2019}.
-This book written by the experienced practitioner Richard D. Palmer will be a guiding light throughout the thesis, so it serves as the main source and validation, 
-or maybe invalidation is a better word, as we explore the academic maintenance scheduling literture and also, and more importantly, it will also be the source 
-which above all else will us us through the perilous process of create a generalize model setup for maintenance scheduling.
+\begin{table}
+	\begin{tabular}{@{}cll@{}}
+		\toprule
+		Type & Symbol & Description \\
 
-
-\section{The General Maintenance Scheduling Process}
+	\end{tabular}
+\end{table}
+\begin{table}[ht]
+\centering
+\caption{Summary of Sets, Parameters, and Variables}
+\label{tab:model_elements}
+\begin{tabular}{@{}cll@{}} % Alignments: left, center, left
+\toprule
+Type & Symbol & Description \\
+\midrule
+Set & \( S \) & Set of suppliers \\
+Parameter & \( d_i \) & Demand of customer \( i \) (units) \\
+Variable & \( x_{ij} \) & Quantity shipped from supplier \( i \) to customer \( j \) \\
+\bottomrule
+\end{tabular}
+\end{table}
+This book written by the experienced practitioner Richard D. Palmer will be guiding throughout the thesis, so it serves as the main source of validation, 
+and invalidation throughout the thesis, as we explore the academic maintenance scheduling literture and also, and more importantly, it will also be the source 
+which above all else will us us through the process of creating a generalize model setup for maintenance scheduling.
+\begin{table}
+    \centering
+    \caption{Example of a Simple Table}
+    \label{tab:example_table}
+    \begin{tabular}{@{}cll@{}}
+        \toprule
+        Type & Symbol & Description \\
+        \midrule
+        Set & \( S \) & Set of suppliers \\
+        Parameter & \( d_i \) & Demand of customer \( i \) (units) \\
+        Variable & \( x_{ij} \) & Quantity shipped from supplier \( i \) to customer \( j \) \\
+        \bottomrule
+    \end{tabular}
+\end{table}\section{The General Maintenance Scheduling Process}
 This section will provide an overview of the maintenance scheduling process in the most abstracted way possible. It will be important to understand this setup
 throughly as most industries that perform maintanance of a considerable scale follow this process. Many industries are of course unique and deviate
 from general framework in specific work but the fundamentals are usually quite similar. 
