--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -8,8 +8,9 @@
 \usepackage{amssymb}
 \usepackage{multicol}
 \usepackage{natbib}
-
 \usepackage{hyperref}
+\usepackage{booktabs} % For professional quality tables
+\usepackage{array}    % For better column alignment
 
 \usepackage[a4paper,width=175mm,top=20mm,bottom=20mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
