--- a/tex/models/tactical.tex
+++ b/tex/models/tactical.tex
@@ -11,37 +11,35 @@ out on each of the days of the work orders scheduled by the strategic agent.
 The tactical model is responsible for providing an initial suggestion for a weekly schedule, below we see the model for the tactical agent.
 \begin{alignat}{2}
 	& \textbf{Minimize:} \notag\\
-	& \sum_{o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \sum_{d \in \SetDays{}} \ParTacticalValue \cdot \VarTacticalWork{d}{o}\notag\\  
-	& + \sum_{r \in \SetResource} \sum_{d \in \SetDays{}} \ParTacticalPenalty \cdot \VarTacticalExcess                                               \\  
+	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \sum_{\ElementDays \in \SetDays{}} \ParTacticalValue \cdot \VarTacticalWork{\ElementDays}{\ElementOperation}\notag\\  
+	& + \sum_{r \in \SetResource} \sum_{\ElementDays \in \SetDays{}} \ParTacticalPenalty \cdot \VarTacticalExcess                                               \\  
 	& \textbf{Subject to:}                                                          \notag                                                                   \\
-	& \sum_{o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \ParOperationWork{o} \cdot \VarTacticalWork{d}{o}\notag\\
+	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \ParOperationWork{\ElementOperation} \cdot \VarTacticalWork{\ElementDays}{\ElementOperation}\notag\\
 	& \quad \leq \ParTacticalResource + \VarTacticalExcess\notag\\ 
-	& \quad \quad \forall  d \in \SetDays{}, \forall r \in \SetResource\\ 
-	& \sum_{d^* \in \SetDays{\ParDurationUpper}} \VarTacticalWorkBinary{d^*}{o} \notag\\
-	& \quad \geq \ParDurationLower \cdot \VarTacticalWorkBinaryConsecutive \notag\\ 
-	& \quad \forall o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \quad \forall d \in \SetDays{} \\
-	& \sum_{d^* \in  \SetDays{\ParDurationUpper}} \VarTacticalWorkBinary{d^*}{o} \notag\\
-	& \quad \leq \ParDurationUpper \cdot \VarTacticalWorkBinaryConsecutive \notag\\ 
-	& \quad \forall o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \forall d \in \SetDays{} \\
-	& \sum_{o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \VarTacticalWorkBinaryConsecutive = 1, \notag\\
-	& \quad \forall d \in \SetDays{} \notag\\
-	& \sum_{d \in \SetDays{}} d \cdot \VarTacticalWork{d}{o1} + \VarTacticalOperationDifference  = \sum_{d \in \SetDays{}} d \cdot \VarTacticalWork{d}{o2}                   \notag  \\ 
-	& \quad \forall (o1, o2) \in \ParFinishStart                                                           \\ 
-	& \sum_{d \in \SetDays{}} d \cdot \VarTacticalWork{d}{o1} = \sum_{d \in D} d \cdot \VarTacticalWork{d}{o2}  \notag                               \\ 
-	& \quad \forall (o1, o2) \in \ParStartStart                                                       \\ 
-	& \VarTacticalWork{d}{o} \leq \ParNumberOfPeople \cdot \ParOperatingTime \notag                                                     \\ 
-	& \quad \forall d \in \SetDays{} \forall o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                  \\
-	& \VarTacticalWork{d}{o} \in \{0, 1\} \quad \notag\\
-	& \quad \forall d \in \SetDays{} \forall o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                         \\
+	& \quad \forall \ElementDays \in \SetDays{} \quad \forall r \in \SetResource\\ 
+	& \sum_{\ElementDays = \ParEarliestStart}^{\ParLatestFinish} \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} = \ParDuration \notag\\
+	& \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
+	& \sum_{\ElementDays^* \in  \SetDays{\ParDuration}} \VarTacticalWorkBinary{\ElementDays^*}{\ElementOperation} \notag\\
+	& \quad = \ParDuration \cdot \VarTacticalWorkBinaryConsecutive \notag\\ 
+	& \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \quad \forall \ElementDays \in \SetDays{} \\
+	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \VarTacticalWorkBinaryConsecutive = 1, \notag\\
+	& \quad \forall \ElementDays \in \SetDays{} \notag\\
+	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWork{\ElementDays}{\ElementOperation1} + \VarTacticalOperationDifference  = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWork{\ElementDays}{\ElementOperation2}                   \notag  \\ 
+	& \quad \forall (o1, \ElementOperation2) \in \ParFinishStart                                                           \\ 
+	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWork{\ElementDays}{\ElementOperation1} = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWork{\ElementDays}{\ElementOperation2}  \notag                               \\ 
+	& \quad \forall (o1, \ElementOperation2) \in \ParStartStart                                                       \\ 
+	& \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \ParNumberOfPeople \cdot \ParOperatingTime \notag                                                     \\ 
+	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                  \\
+	& \VarTacticalWork{\ElementDays}{\ElementOperation} \in \mathbb{R} \quad \notag\\
+	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                         \\
 	& \VarTacticalExcess \in \mathbb{R} \quad\notag\\
-	& \quad  \forall r \in \SetResource \forall d \in \SetDays{}                                        \\
-	& \VarTacticalWorkBinary{d}{o} \in \{0, 1\}\quad \notag\\
-	& \quad \forall d \in \SetDays{} \forall o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
+	& \quad \forall r \in \SetResource \quad \forall \ElementDays \in \SetDays{}                                        \\
+	& \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} \in \{0, 1\}\quad \notag\\
+	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
 	& \VarTacticalWorkBinaryConsecutive \in \{0, 1\}\quad \notag\\
-	& \quad \forall d \in \SetDays{} \forall o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
-	& \VarTacticalOperationDifference \in \{ \ParDurationLower, \notag\\
-	& \quad \ParDurationUpper \} \notag\\
-	& \quad \forall o \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                      \\
+	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
+	& \VarTacticalOperationDifference \in \{0, 1\} \\
+	& \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                      \\
 	& \VarMetaTime \in  [0, \infty] 
 \end{alignat}
 
